--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "isort>=6.0.1",
+    "mypy>=1.17.0",
     "pytest>=8.4.1",
     "ruff>=0.12.4",
 ]
